kustomize/overlays/openshift-local/resources/prom-keycloak-proxy/routes/prom-keycloak-proxy/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: prom-keycloak-proxy
spec:
  host: prom-keycloak-proxy.apps-crc.testing
  to:
    kind: Service
    name: prom-keycloak-proxy
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
